[FIX] uxap.ObjectPageHeader: Title Selection Icon aligned with VD
JIRA: BGSOFUIPIRIN-2367
BCP: 1770464521

--- a/src/themelib_sap_belize/src/sap/uxap/themes/sap_belize_hcw/ObjectPageHeader.less
+++ b/src/themelib_sap_belize/src/sap/uxap/themes/sap_belize_hcw/ObjectPageHeader.less
@@ -31,3 +31,11 @@ html .sapUiSizeCompact .sapUiContainer-ExtraWide .sapUxAPObjectPageHeaderIdentif
 		}
 	}
 }
+
+.sapUxAPObjectPageHeaderTitleArrow .sapMBtn {
+	margin-top: -0.175rem;
+}
+
+.sapUiSizeCompact .sapUxAPObjectPageHeaderTitleArrow .sapMBtn {
+	margin-top: -0.1rem;
+}
